# picking-routes

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  order_generator.py  pyproject.toml  requirements.txt  server.py  simpy_order_generator.py  utils.py
frontend/: .cta.json  index.html  package-lock.json  package.json
frontend/src/routes/: index.tsx
