[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Victor Campos",email = "victorde.ac@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "numpy (>=2.3.0,<3.0.0)",
    "ortools (>=9.12.4544,<9.13.4784)",
    "flask-cors (>=6.0.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false